# razer-ornata-lab

./: Cargo.toml  README.md
assets/: icon.icns
src/: emojis.rs  lib.rs  main.rs  razer_report.rs
tests/: razer_report_test.rs
