[package]
name = "razer_rgb_mac"
version = "0.1.0"
edition = "2021"
description = "Control your Razer keyboard RGB lighting"
authors = ["Lucas F.Martins <dyncoch@gmail.com>"]
license = "MIT"
repository = "https://github.com/dyncoch/razer-rgb-mac"

[package.metadata.bundle]
name = "Razer RGB Control"
identifier = "com.lucasfmartins.razer-rgb-control"
version = "0.1.0"
copyright = "Copyright (c) 2025 Lucas F.Martins"
category = "Utilities"
short_description = "Control Razer keyboard RGB lighting"
long_description = "A simple application to control RGB lighting on Razer keyboards"
icon = ["assets/icon.icns"]
osx_minimum_system_version = "10.11"

[dependencies]
rusb = "0.9"
eframe = "0.31"
egui = "0.31"
